# image-hosting

./: .gitignore  CI_CD_Strategy.md  Environment_Strategy.md  GEMINI.md  README.md  TASK.md  docker-compose.yml
.github/workflows/: deploy.yml_example
apps/backend/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
apps/backend/scripts/: simulate-webhook.ts
apps/backend/src/: app.controller.ts  app.module.ts  app.service.ts
apps/backend/src/auth/: auth.module.ts  clerk.guard.ts  clerk.strategy.ts
apps/backend/src/email/: email.module.ts  email.service.ts  email.worker.service.ts
apps/backend/src/image/: image.controller.ts  image.module.ts  image.service.ts
apps/backend/src/minio/: minio.module.ts  minio.service.ts
apps/backend/src/supabase/: supabase.service.ts
apps/backend/src/thumbnail/: thumbnail.module.ts  thumbnail.service.ts  thumbnail.worker.service.ts
apps/backend/src/types/: express.d.ts
apps/backend/src/upstash/: upstash.module.ts  upstash.service.ts
apps/backend/src/user/: user.controller.ts  user.service.ts
apps/backend/src/webhook/: webhook.controller.ts  webhook.module.ts
apps/backend/supabase/migrations/: 00_create_images_table.sql
apps/frontend/: Dockerfile  package.json  pnpm-lock.yaml  vite.config.ts
apps/frontend/src/: App.vue  main.ts
infra/helm/: README.md  secrets.template.yaml
infra/helm/image-hosting/: Chart.yaml  values.yaml
infra/terraform/: README.md  main.tf  providers.tf  variables.tf
proto/: thumbnail_service.proto
service/: Cargo.toml  Dockerfile  build.rs
service/src/: main.rs
(+26 files in other folders)
